💚 Fix `from_bionty` (#95)

--- a/docs/cell_line.ipynb
+++ b/docs/cell_line.ipynb
@@ -55,7 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us create a public knowledge accessor with {meth}`~docs:lnschema_bionty.dev.BioRegistry.bionty`, which chooses a default public knowledge source from {class}`~docs:lnschema_bionty.PublicSource`. It's a [Bionty](https://lamin.ai/docs/bionty/bionty.bionty) object, which you can think about as a less-capable registry:"
+    "Let us create a public knowledge accessor with {meth}`~docs:lnschema_bionty.dev.BioRegistry.public`, which chooses a default public knowledge source from {class}`~docs:lnschema_bionty.PublicSource`. It's a [Bionty](https://lamin.ai/docs/bionty/bionty.bionty) object, which you can think about as a less-capable registry:"
    ]
   },
   {
@@ -64,8 +64,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cell_line_bt = lb.CellLine.public()\n",
-    "cell_line_bt"
+    "public = lb.CellLine.public()\n",
+    "public"
    ]
   },
   {
@@ -81,7 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = cell_line_bt.df()\n",
+    "df = public.df()\n",
     "df.head()"
    ]
   },
@@ -89,7 +89,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Unlike registries, you can also export it as a Pronto object via `cell_line_bt.ontology`."
+    "Unlike registries, you can also export it as a Pronto object via `public.ontology`."
    ]
   },
   {
@@ -112,7 +112,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lookup = cell_line_bt.lookup()"
+    "lookup = public.lookup()"
    ]
   },
   {
@@ -161,7 +161,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lookup = cell_line_bt.lookup(cell_line_bt.ontology_id)"
+    "lookup = public.lookup(public.ontology_id)"
    ]
   },
   {
@@ -193,7 +193,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cell_line_bt.search(\"hek293\").head(1)"
+    "public.search(\"hek293\").head(1)"
    ]
   },
   {
@@ -209,7 +209,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cell_line_bt.search(\"suspension cell line\", field=cell_line_bt.definition).head(1)"
+    "public.search(\"suspension cell line\", field=public.definition).head(1)"
    ]
   },
   {
@@ -257,7 +257,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validated = cell_line_bt.validate(df_orig.index, cell_line_bt.name)\n",
+    "validated = public.validate(df_orig.index, public.name)\n",
     "df_orig.index[~validated]"
    ]
   },
@@ -300,8 +300,8 @@
     "public_source = lb.PublicSource.filter(\n",
     "    source=\"clo\", version=\"2022-03-21\", organism=\"all\"\n",
     ").one()\n",
-    "cell_line_bt = lb.CellLine.public(public_source=public_source)\n",
-    "cell_line_bt"
+    "public = lb.CellLine.public(public_source=public_source)\n",
+    "public"
    ]
   },
   {
