--- a/docs/cell_type.ipynb
+++ b/docs/cell_type.ipynb
@@ -53,7 +53,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us create a public knowledge accessor with {meth}`~docs:lnschema_bionty.dev.BioRegistry.bionty`, which chooses a default public knowledge source from {class}`~docs:lnschema_bionty.PublicSource`. It's a [Bionty](https://lamin.ai/docs/bionty/bionty.bionty) object, which you can think about as a less-capable registry:"
+    "Let us create a public knowledge accessor with {meth}`~docs:lnschema_bionty.dev.BioRegistry.public`, which chooses a default public knowledge source from {class}`~docs:lnschema_bionty.PublicSource`. It's a [Bionty](https://lamin.ai/docs/bionty/bionty.bionty) object, which you can think about as a less-capable registry:"
    ]
   },
   {
@@ -62,8 +62,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cell_type_bt = lb.CellType.public()\n",
-    "cell_type_bt"
+    "public = lb.CellType.public()\n",
+    "public"
    ]
   },
   {
@@ -79,7 +79,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = cell_type_bt.df()\n",
+    "df = public.df()\n",
     "df.head()"
    ]
   },
@@ -87,7 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Unlike registries, you can also export it as a Pronto object via `cell_type_bt.ontology`."
+    "Unlike registries, you can also export it as a Pronto object via `public.ontology`."
    ]
   },
   {
@@ -110,7 +110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lookup = cell_type_bt.lookup()"
+    "lookup = public.lookup()"
    ]
   },
   {
@@ -166,7 +166,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cell_type_bt.search(\"CD8 positive T cell\").head(5)"
+    "public.search(\"CD8 positive T cell\").head(5)"
    ]
   },
   {
@@ -182,9 +182,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cell_type_bt.search(\n",
-    "    \"CD8 positive alpha beta T cell\", field=cell_type_bt.definition\n",
-    ").head(5)"
+    "public.search(\"CD8 positive alpha beta T cell\", field=public.definition).head(5)"
    ]
   },
   {
@@ -232,7 +230,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validated = cell_type_bt.validate(df_orig.index, cell_type_bt.name)\n",
+    "validated = public.validate(df_orig.index, public.name)\n",
     "df_orig.index[~validated]"
    ]
   },
@@ -275,8 +273,8 @@
     "public_source = lb.PublicSource.filter(\n",
     "    source=\"cl\", version=\"2023-04-20\", organism=\"all\"\n",
     ").one()\n",
-    "cell_type_bt = lb.CellType(public_source=public_source)\n",
-    "cell_type_bt"
+    "public = lb.CellType.public(public_source=public_source)\n",
+    "public"
    ]
   },
   {
