--- a/docs/developmental_stage.ipynb
+++ b/docs/developmental_stage.ipynb
@@ -56,7 +56,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us create a public knowledge accessor with {meth}`~docs:lnschema_bionty.dev.BioRegistry.bionty`, which chooses a default public knowledge source from {class}`~docs:lnschema_bionty.PublicSource`. It's a [Bionty](https://lamin.ai/docs/bionty/bionty.bionty) object, which you can think about as a less-capable registry:"
+    "Let us create a public knowledge accessor with {meth}`~docs:lnschema_bionty.dev.BioRegistry.public`, which chooses a default public knowledge source from {class}`~docs:lnschema_bionty.PublicSource`. It's a [Bionty](https://lamin.ai/docs/bionty/bionty.bionty) object, which you can think about as a less-capable registry:"
    ]
   },
   {
@@ -65,8 +65,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "developmental_stage_bt = lb.DevelopmentalStage.public()\n",
-    "developmental_stage_bt"
+    "public = lb.DevelopmentalStage.public()\n",
+    "public"
    ]
   },
   {
@@ -82,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = developmental_stage_bt.df()\n",
+    "df = public.df()\n",
     "df.head()"
    ]
   },
@@ -90,7 +90,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Unlike registries, you can also export it as a Pronto object via `developmental_stage_bt.ontology`."
+    "Unlike registries, you can also export it as a Pronto object via `public.ontology`."
    ]
   },
   {
@@ -113,7 +113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lookup = developmental_stage_bt.lookup()"
+    "lookup = public.lookup()"
    ]
   },
   {
@@ -162,7 +162,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lookup = developmental_stage_bt.lookup(developmental_stage_bt.ontology_id)"
+    "lookup = public.lookup(public.ontology_id)"
    ]
   },
   {
@@ -201,7 +201,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "developmental_stage_bt.search(\"organogenesis\").head(3)"
+    "public.search(\"organogenesis\").head(3)"
    ]
   },
   {
@@ -217,7 +217,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "developmental_stage_bt.search(\"developmental stage\").head(3)"
+    "public.search(\"developmental stage\").head(3)"
    ]
   },
   {
@@ -265,7 +265,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validated = developmental_stage_bt.validate(df_orig.index, developmental_stage_bt.name)\n",
+    "validated = public.validate(df_orig.index, public.name)\n",
     "df_orig.index[~validated]"
    ]
   },
@@ -308,8 +308,8 @@
     "public_source = lb.PublicSource.filter(\n",
     "    source=\"hsapdv\", version=\"2020-03-10\", organism=\"human\"\n",
     ").one()\n",
-    "developmental_stage_bt = lb.DevelopmentalStage.public(public_source=public_source)\n",
-    "developmental_stage_bt"
+    "public = lb.DevelopmentalStage.public(public_source=public_source)\n",
+    "public"
    ]
   },
   {
