--- a/docs/enrichr.ipynb
+++ b/docs/enrichr.ipynb
@@ -44,7 +44,7 @@
     "\n",
     "Please ensure that you have created or loaded a LaminDB instance before running the remaining part of this notebook!\n",
     "\n",
-    "This notebook follows the [CellTypist](celltypist), which populate the CellType registry.\n",
+    "This notebook follows the [CellTypist], which populate the CellType registry.\n",
     "```"
    ]
   },
@@ -58,7 +58,7 @@
    },
    "outputs": [],
    "source": [
-    "!lamin load use-cases-registries"
+    "!lamin init --storage ./use-cases-registries --schema bionty"
    ]
   },
   {
