--- a/docs/ethnicity.ipynb
+++ b/docs/ethnicity.ipynb
@@ -55,7 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us create a public knowledge accessor with {meth}`~docs:lnschema_bionty.dev.BioRegistry.bionty`, which chooses a default public knowledge source from {class}`~docs:lnschema_bionty.PublicSource`. It's a [Bionty](https://lamin.ai/docs/bionty/bionty.bionty) object, which you can think about as a less-capable registry:"
+    "Let us create a public knowledge accessor with {meth}`~docs:lnschema_bionty.dev.BioRegistry.public`, which chooses a default public knowledge source from {class}`~docs:lnschema_bionty.PublicSource`. It's a [Bionty](https://lamin.ai/docs/bionty/bionty.bionty) object, which you can think about as a less-capable registry:"
    ]
   },
   {
@@ -64,8 +64,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ethnicity_bt = lb.Ethnicity.public()\n",
-    "ethnicity_bt"
+    "public = lb.Ethnicity.public()\n",
+    "public"
    ]
   },
   {
@@ -81,7 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = ethnicity_bt.df()\n",
+    "df = public.df()\n",
     "df.head()"
    ]
   },
@@ -89,7 +89,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Unlike registries, you can also export it as a Pronto object via `ethnicity_bt.ontology`."
+    "Unlike registries, you can also export it as a Pronto object via `public.ontology`."
    ]
   },
   {
@@ -112,7 +112,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lookup = ethnicity_bt.lookup()"
+    "lookup = public.lookup()"
    ]
   },
   {
@@ -161,7 +161,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lookup = ethnicity_bt.lookup(ethnicity_bt.ontology_id)"
+    "lookup = public.lookup(public.ontology_id)"
    ]
   },
   {
@@ -200,7 +200,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ethnicity_bt.search(\"American\").head(3)"
+    "public.search(\"American\").head(3)"
    ]
   },
   {
@@ -216,7 +216,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ethnicity_bt.search(\"Caucasian\").head(3)"
+    "public.search(\"Caucasian\").head(3)"
    ]
   },
   {
@@ -232,9 +232,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ethnicity_bt.search(\n",
+    "public.search(\n",
     "    \"General characterisation of Ancestry of a population\",\n",
-    "    field=ethnicity_bt.definition,\n",
+    "    field=public.definition,\n",
     ").head()"
    ]
   },
@@ -283,7 +283,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validated = ethnicity_bt.validate(df_orig.index, ethnicity_bt.name)\n",
+    "validated = public.validate(df_orig.index, public.name)\n",
     "df_orig.index[~validated]"
    ]
   },
@@ -326,8 +326,8 @@
     "public_source = lb.PublicSource.filter(\n",
     "    source=\"hancestro\", version=\"3.0\", organism=\"human\"\n",
     ").one()\n",
-    "ethnicity_bt = lb.Ethnicity.public(public_source=public_source)\n",
-    "ethnicity_bt"
+    "public = lb.Ethnicity.public(public_source=public_source)\n",
+    "public"
    ]
   },
   {
