--- a/docs/phenotype.ipynb
+++ b/docs/phenotype.ipynb
@@ -58,7 +58,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us create a public knowledge accessor with {meth}`~docs:lnschema_bionty.dev.BioRegistry.bionty`, which chooses a default public knowledge source from {class}`~docs:lnschema_bionty.PublicSource`. It's a [Bionty](https://lamin.ai/docs/bionty/bionty.bionty) object, which you can think about as a less-capable registry:"
+    "Let us create a public knowledge accessor with {meth}`~docs:lnschema_bionty.dev.BioRegistry.public`, which chooses a default public knowledge source from {class}`~docs:lnschema_bionty.PublicSource`. It's a [Bionty](https://lamin.ai/docs/bionty/bionty.bionty) object, which you can think about as a less-capable registry:"
    ]
   },
   {
@@ -67,8 +67,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "phenotype_bt = lb.Phenotype.public()\n",
-    "phenotype_bt"
+    "public = lb.Phenotype.public()\n",
+    "public"
    ]
   },
   {
@@ -84,7 +84,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = phenotype_bt.df()\n",
+    "df = public.df()\n",
     "df.head()"
    ]
   },
@@ -92,7 +92,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Unlike registries, you can also export it as a Pronto object via `phenotype_bt.ontology`."
+    "Unlike registries, you can also export it as a Pronto object via `public.ontology`."
    ]
   },
   {
@@ -115,7 +115,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lookup = phenotype_bt.lookup()"
+    "lookup = public.lookup()"
    ]
   },
   {
@@ -164,7 +164,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lookup = phenotype_bt.lookup(phenotype_bt.ontology_id)"
+    "lookup = public.lookup(public.ontology_id)"
    ]
   },
   {
@@ -196,7 +196,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "phenotype_bt.search(\"dysplasia\").head(3)"
+    "public.search(\"dysplasia\").head(3)"
    ]
   },
   {
@@ -212,7 +212,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "phenotype_bt.search(\"Congenital hip dysplasia\").head(3)"
+    "public.search(\"Congenital hip dysplasia\").head(3)"
    ]
   },
   {
@@ -228,8 +228,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "phenotype_bt.search(\n",
-    "    \"lack of development of speech and language\", field=phenotype_bt.definition\n",
+    "public.search(\n",
+    "    \"lack of development of speech and language\", field=public.definition\n",
     ").head()"
    ]
   },
@@ -278,7 +278,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validated = phenotype_bt.validate(df_orig.index, phenotype_bt.name)\n",
+    "validated = public.validate(df_orig.index, public.name)\n",
     "df_orig.index[~validated]"
    ]
   },
@@ -321,8 +321,8 @@
     "public_source = lb.PublicSource.filter(\n",
     "    source=\"hp\", version=\"2023-06-17\", organism=\"human\"\n",
     ").one()\n",
-    "phenotype_bt = lb.Phenotype.public(public_source=public_source)\n",
-    "phenotype_bt"
+    "public = lb.Phenotype.public(public_source=public_source)\n",
+    "public"
    ]
   },
   {
