--- a/docs/tissue.ipynb
+++ b/docs/tissue.ipynb
@@ -55,7 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us create a public knowledge accessor with {meth}`~docs:lnschema_bionty.dev.BioRegistry.bionty`, which chooses a default public knowledge source from {class}`~docs:lnschema_bionty.PublicSource`. It's a [Bionty](https://lamin.ai/docs/bionty/bionty.bionty) object, which you can think about as a less-capable registry:"
+    "Let us create a public knowledge accessor with {meth}`~docs:lnschema_bionty.dev.BioRegistry.public`, which chooses a default public knowledge source from {class}`~docs:lnschema_bionty.PublicSource`. It's a [Bionty](https://lamin.ai/docs/bionty/bionty.bionty) object, which you can think about as a less-capable registry:"
    ]
   },
   {
@@ -64,8 +64,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tissue_bt = lb.Tissue.public()\n",
-    "tissue_bt"
+    "public = lb.Tissue.public()\n",
+    "public"
    ]
   },
   {
@@ -81,7 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = tissue_bt.df()\n",
+    "df = public.df()\n",
     "df.head()"
    ]
   },
@@ -89,7 +89,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Unlike registries, you can also export it as a Pronto object via `tissue_bt.ontology`."
+    "Unlike registries, you can also export it as a Pronto object via `public.ontology`."
    ]
   },
   {
@@ -112,7 +112,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lookup = tissue_bt.lookup()"
+    "lookup = public.lookup()"
    ]
   },
   {
@@ -161,7 +161,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lookup = tissue_bt.lookup(tissue_bt.ontology_id)"
+    "lookup = public.lookup(public.ontology_id)"
    ]
   },
   {
@@ -200,7 +200,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tissue_bt.search(\"alveolus lung\").head(3)"
+    "public.search(\"alveolus lung\").head(3)"
    ]
   },
   {
@@ -216,7 +216,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tissue_bt.search(\"nasal sac\").head(3)"
+    "public.search(\"nasal sac\").head(3)"
    ]
   },
   {
@@ -232,7 +232,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tissue_bt.search(\"nose\", synonyms_field=None).head(3)"
+    "public.search(\"nose\", synonyms_field=None).head(3)"
    ]
   },
   {
@@ -248,7 +248,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tissue_bt.search(\"alveolus in the lung\", field=tissue_bt.definition).head()"
+    "public.search(\"alveolus in the lung\", field=public.definition).head()"
    ]
   },
   {
@@ -296,7 +296,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validated = tissue_bt.validate(df_orig.index, tissue_bt.ontology_id)\n",
+    "validated = public.validate(df_orig.index, public.ontology_id)\n",
     "df_orig.index[~validated]"
    ]
   },
@@ -339,8 +339,8 @@
     "public_source = lb.PublicSource.filter(\n",
     "    source=\"uberon\", version=\"2023-04-19\", organism=\"all\"\n",
     ").one()\n",
-    "tissue_bt = lb.Tissue.public(public_source=public_source)\n",
-    "tissue_bt"
+    "public = lb.Tissue.public(public_source=public_source)\n",
+    "public"
    ]
   },
   {
